Make it work ...

--- a/src/Server/RebacExperiments.Server.Api/appsettings.json
+++ b/src/Server/RebacExperiments.Server.Api/appsettings.json
@@ -9,10 +9,10 @@
     "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=ZanzibarExperiment;TrustServerCertificate=Yes"
   },
   "OpenFGA": {
-    "ApiScheme": "",
-    "ApiHost": "",
-    "StoreId": "",
-    "AuthorizationModelId": ""
+    "ApiScheme": "http",
+    "ApiHost": "localhost:8080",
+    "StoreId": "01HJ5THG0WHE0HYNH1ZF10Q2YW",
+    "AuthorizationModelId": "01HJ5THG11EYZDWJ6N8G5PQRAE"
   },
   "AllowedHosts": "localhost",
   "AllowedOrigins": [
