--- a/src/Server/RebacExperiments.Server.Api/appsettings.json
+++ b/src/Server/RebacExperiments.Server.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=ZanzibarExperiment;TrustServerCertificate=Yes"
+    "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=AclExperiments;TrustServerCertificate=Yes"
   },
   "OpenFGA": {
     "ApiScheme": "http",
