--- a/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
+++ b/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
@@ -26,13 +26,19 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="8.0.0" />
         <PackageReference Include="Microsoft.OpenApi.OData" Version="1.4.0" />
         <PackageReference Include="Microsoft.Spatial" Version="7.16.0" />
-        <PackageReference Include="OpenFga.Sdk" Version="0.2.5" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+        <PackageReference Include="OpenFga.Sdk" Version="0.3.0" />
         <PackageReference Include="Serilog" Version="3.1.1" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RebacExperiments.Server.Database\RebacExperiments.Server.Database.csproj" />
+      <ProjectReference Include="..\RebacExperiments.Server.OpenFga\RebacExperiments.Server.OpenFga.csproj" />
     </ItemGroup>
 
     <ItemGroup>
