--- a/src/Server/RebacExperiments.Server.Api/appsettings.json
+++ b/src/Server/RebacExperiments.Server.Api/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=AclExperiments;TrustServerCertificate=Yes"
+    "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=AclExperiments;TrustServerCertificate=Yes",
+    "OpenFgaDatabase": "Host=localhost; Database=postgres; Username=postgres; Password=password"
   },
   "OpenFGA": {
-    "ApiScheme": "http",
-    "ApiHost": "localhost:8080",
     "StoreId": "01HJ5THG0WHE0HYNH1ZF10Q2YW",
-    "AuthorizationModelId": "01HJ5THG11EYZDWJ6N8G5PQRAE"
+    "AuthorizationModelId": "01HJ5THG11EYZDWJ6N8G5PQRAE",
+    "ApiUrl": "http://localhost:8080"
   },
   "AllowedHosts": "localhost",
   "AllowedOrigins": [
