--- a/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
+++ b/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
@@ -24,6 +24,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
         <PackageReference Include="Microsoft.OpenApi.OData" Version="1.4.0" />
         <PackageReference Include="Microsoft.Spatial" Version="7.16.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
