--- a/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
+++ b/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0" />
         <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.2.1" />
         <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.2.1" />
