--- a/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
+++ b/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
@@ -20,6 +20,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Shared\MainLayout - Copy.razor.js" />
       <None Remove="Shared\MainLayout.razor.js" />
     </ItemGroup>
 
