--- a/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
+++ b/src/Server/RebacExperiments.Server.Api/RebacExperiments.Server.Api.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="8.0.0" />
         <PackageReference Include="Azure.Identity" Version="1.10.4" />
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
