--- a/src/Server/RebacExperiments.Server.Api/appsettings.json
+++ b/src/Server/RebacExperiments.Server.Api/appsettings.json
@@ -6,6 +6,14 @@
       "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "None"
     }
   },
+  "Authentication": {
+    "Schemes": {
+      "GitHub": {
+        "ClientId": "NoLeaksHere! It's defined somewhere else.",
+        "ClientSecret": "NoLeaksHere! It's defined somewhere else."
+      }
+    }
+  },
   "ConnectionStrings": {
     "ApplicationDatabase": "Data Source=BYTEFISH\\SQLEXPRESS;Integrated Security=true;Initial Catalog=AclExperiments;TrustServerCertificate=Yes",
     "OpenFgaDatabase": "Host=localhost; Database=postgres; Username=postgres; Password=password"
