Host the Blazor Application in the Server Project. Add GitHub Authentication Login Flow on Blazor-side.

--- a/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
+++ b/src/Blazor/RebacExperiments.Blazor/RebacExperiments.Blazor.csproj
@@ -20,12 +20,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Components\LinkButton\LinkButton.razor.js" />
       <None Remove="Components\Markdown\MainLayout.razor.js" />
       <None Remove="Shared\MainLayout - Copy.razor.js" />
       <None Remove="Shared\MainLayout.razor.js" />
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Components\LinkButton\LinkButton.razor.js" />
       <Content Include="Shared\MainLayout.razor.js" />
     </ItemGroup>
 
